<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtEscolheuData"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/data"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:text=""
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtEscolhaServico"
        android:textSize="25dp" />

    <Spinner
        android:id="@+id/horario"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/servico"
        android:textColor="#000000"
        android:layout_marginStart="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp" />


    <Button
        android:layout_marginTop="80dp"
        android:id="@+id/btconcluir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnconcluir"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btvoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/txtBTnvoltar" />


</LinearLayout>